data/derived/comb/progs/unify/prog6205.ml.out
Characters 46-56:
  let rec digitsOfInt n = if n < 0 then [] else (n mod 10) ; digitsOfInt n / 10;;
                                                ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
